--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
     "@hookform/resolvers": "^3.1.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
