--- a/jest.config.json
+++ b/jest.config.json
@@ -2,11 +2,14 @@
   "preset": "jest-expo",
   "bail": true,
   "setupFiles": [
-    "./__tests__/mocks/async-storage.js"
+    "./__tests__/mocks/async-storage.js",
+    "./__tests__/mocks/react-native-safe-area-context.js"
   ],
   "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
   "testPathIgnorePatterns": [
-    "./__tests__/coverage"
+    "./__tests__/coverage",
+    "./__tests__/mocks",
+    "./__tests__/utils"
   ],
   "transformIgnorePatterns": [
     "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
